fix spacing

--- a/css/sidescroll.css
+++ b/css/sidescroll.css
@@ -35,7 +35,7 @@ font-family: 'museo-sans-rounded';
 color: grey;	
 }
 
-.authorname {
+span.authorname {
 color:#EC380E;
 letter-spacing: 1px;
 font-size: 15px;
@@ -71,7 +71,6 @@ padding-right: 50px;
 background: #501F84;
 height: 100%;
 margin-top: 0;
-
 }
 
 .aside li {
@@ -95,13 +94,14 @@ background: #501F84;
 border-bottom: 1px dotted white;
 padding-bottom: 40px;	
 }
-	img.logo {
-	position: relative;
-	right: 0;
-	top: 570px;
-	width: 140px;
-	display: block;
-	}
+
+img.logo {
+position: relative;
+right: 0;
+top: 570px;
+width: 140px;
+display: block;
+}
 
 #home, #news, #twitter, #blogs {
 overflow-y:scroll;
@@ -122,7 +122,7 @@ padding-right: 50px;
 }
 
 #blogs {	
-
+/*???? should i set widths for these??*/
 }
 
 
@@ -200,6 +200,7 @@ color: #2a2a2a;
 margin: 0;	
 }
 
+
 /*regular columns*/
 
 .column {
@@ -255,10 +256,10 @@ color: #2a2a2a;
 float: left;
 }
 
+
 /*twitter*/
 
 .tweet-box {
-
 width: 200px;
 padding:.8em;
 }
@@ -310,7 +311,6 @@ margin-bottom: 90px;
 float:right;
 width: 250px;
 padding-left: 50px;
-
 }
 
 .blogger-info h3 {
@@ -337,7 +337,6 @@ font-family: 'museo-sans-condensed';
 font-weight:200;	
 font-style: italic;
 margin-bottom: 120px;
-
 }
 
 
